<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/activty_backgroud"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/activity_title_include">

    </include>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/title_color"
            android:id="@+id/tv_can"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/coupon_can"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_used"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/coupon_used"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_over"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/coupon_over"
            android:layout_height="match_parent" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></FrameLayout>
</LinearLayout>