<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/activty_backgroud"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/activity_title_include">

    </include>

    <LinearLayout
        android:id="@+id/ll_add_bill"
        android:clickable="true"
        android:background="@drawable/ll_btn_square"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:layout_marginLeft="@dimen/x10"
            android:background="@drawable/icon_add"
            android:layout_width="@dimen/x23"
            android:layout_height="@dimen/x23" />

        <TextView
            android:textColor="@color/title_color"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/add_bill_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bill"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:text="@string/choose_bill_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <TextView
        android:layout_marginBottom="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:layout_marginLeft="@dimen/x10"
        android:text="@string/choose_bill_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/rl_choose_bill"
        android:clickable="true"
        android:background="@drawable/ll_btn_square"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:text="@string/no_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginRight="@dimen/x20"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/icon_right"
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/x20" />

    </RelativeLayout>

</LinearLayout>